-
Bug
-
Resolution: Done
-
P2: Important
-
5.7.0, 5.9.3, 5.10
-
None
Qt does not support compose key even if it's set in the keymap. This makes it impossible to e.g. input letters like ö, ä, ü, ß with an English keyboard. Those letters just were entered through the compose key on an Xwayland window.
Steps to reproduce:
1. Use a Wayland session (e.g. Plasma 5.7)
2. Setup a keymap with compose key support (e.g. systemsettings -> Input Devices -> Keyboard -> Advanced -> select a "Position of compose key")
3. Open a Qt application with --platform wayland
4. Try to enter text with the compose key
5. Open same application with --platform xcb
6. Try to enter text with compose key
Actual Result: input is wrong in case of Qt window
Expected Result: same text entered whether it's xcb or wayland
Please note that GTK+ on Wayland handles this correctly.
- relates to
-
QTBUG-64572 Accents and diaereses don't work under wayland
-
- Closed
-
| For Gerrit Dashboard: QTBUG-54792 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 111600,4 | Implement basic key composition support | 5.10 | qt/qtwayland | Status: NEW | 0 | 0 |